Fixed notebook generating aggregated data

--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -190,8 +190,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Processed 15768 responses from 219 participants.\n"
      ]
@@ -293,12 +293,12 @@
    "source": [
     "## Add missing data & evaluate responses\n",
     "\n",
-    "Evaluat whether responses are correct or not add normalized response time (RT) transformed using natural logarithm."
+    "Evaluate whether responses are correct or not, add normalized response time (RT) transformed using natural logarithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,20 +452,23 @@
     "                    correct = results.loc[(sid, pid, tid, ttype), \"Correct\"]\n",
     "                    results.loc[(sid, pid, tid, ttype), \"Correctnorm\"] = normalize_auc(correct)\n",
     "\n",
-    "                    # For recognition task only\n",
-    "                    # get the mean AUC and RT for words only and non-words only\n",
-    "                    if ttype == \"recognition\":\n",
-    "                        for cat in [\"word\", \"non-word\"]:\n",
-    "                            cat_ = cat.replace(\"-\", \"\")\n",
+    "                    for cat in [\"word\", \"non-word\"]:\n",
+    "                        cat_ = cat.replace(\"-\", \"\")\n",
+    "                        # for both kind of tasks\n",
+    "                        # get RT for words only and non-words separately\n",
+    "                        rt = dtt[(dtt[\"Category\"] == cat)][\"RT\"].mean()\n",
+    "                        rtn = dtt[(dtt[\"Category\"] == cat)][\"RTnorm\"].mean()\n",
+    "                        results.loc[(sid, pid, tid, ttype), \"RT_%s\" % cat_] = rt\n",
+    "                        results.loc[(sid, pid, tid, ttype), \"RTnorm_%s\" % cat_] = rtn\n",
+    "                        # for recognition task only\n",
+    "                        # get the mean AUC\n",
+    "                        if ttype == \"recognition\":\n",
     "                            dg[\"Frequencies\"] = dtt[dtt[\"Category\"] == cat].groupby([category_name])[\"Response\"].value_counts()\n",
     "                            dg = dg.fillna(0)\n",
     "                            freqs = dg[\"Frequencies\"].tolist()\n",
     "                            auc = get_auc(freqs[4:], freqs[:4])\n",
     "                            results.loc[(sid, pid, tid, ttype), \"AUC_%s\" % cat_] = auc\n",
-    "                            results.loc[(sid, pid, tid, ttype), \"AUCnorm_%s\" % cat_] = normalize_auc(auc)\n",
-    "                        rt = dtt[dtt[\"Category\"] == cat][\"RT\"].mean()\n",
-    "                        results.loc[(sid, pid, tid, ttype), \"RT_%s\" % cat_] = rt\n",
-    "                        results.loc[(sid, pid, tid, ttype), \"RTnorm_%s\" % cat_] = normalize_rt(rt)                    \n",
+    "                            results.loc[(sid, pid, tid, ttype), \"AUCnorm_%s\" % cat_] = normalize_auc(auc)               \n",
     "            results.loc[(sid, pid), \"Firstfont\"] = results.loc[(sid, pid, 1, \"lexical\"), \"Font\"]\n",
     "    # fix the type for order column\n",
     "    # results[\"Order\"] = results[\"Order\"].astype(int)\n",
@@ -486,12 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Successfully saved to CSV files.\n"
      ]
@@ -508,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Not used: remove outliers\n",
+    "# Replace outliers\n",
     "\n",
     "Outliers are responses times (RTs) outside mean +- 2*STD.\n",
     "These RTs are being replaced by a mean of RTs for a participant and task type (lexical, decision)."
@@ -516,12 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Replaced 557 outliers\n",
       "Replacing outliers changes the global normalized mean from 7.756 to 7.719\n",
@@ -565,12 +568,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Successfully saved to CSV files.\n"
      ]
@@ -593,9 +596,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python383jvsc74a57bd03db8bdaf9c9e84f38f1bd928cb698e6d6a9172aa8642df80a78b7e4b6ededb17",
+   "display_name": "Python 3.8.3 64-bit ('3.8.3': pyenv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -607,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
