Fixed compilation of figure 5

--- a/notebooks/6 Compile figures.ipynb
+++ b/notebooks/6 Compile figures.ipynb
@@ -11,37 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Index(['ParticipantID', 'Type', 'TestID', 'TrialID', 'StudyID', 'Fluent',\n       'Training', 'Font', 'Sample', 'Category', 'Response', 'Correct', 'Seen',\n       'Foil', 'RT', 'RTnorm', 'JoM', 'JoL', 'Date'],\n      dtype='object')\nIndex(['StudyID', 'ParticipantID', 'TestID', 'Type', 'TaskID', 'Order',\n       'Ordertype', 'Firstfont', 'Fluent', 'Training', 'isDesigner', 'Font',\n       'Correct', 'RT', 'RTnorm', 'RT_word', 'RT_nonword', 'RTnorm_word',\n       'RTnorm_nonword', 'AUC', 'AUC_word', 'AUC_nonword', 'JoL', 'JoM',\n       'Date', 'AUCnorm', 'Correctnorm', 'AUCnorm_word', 'AUCnorm_nonword'],\n      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "\n",
-    "d = pd.read_csv(os.path.join(\"..\", \"data\", \"data_outliers-replaced.csv\"), index_col=0)\n",
-    "da = pd.read_csv(os.path.join(\"..\", \"data\", \"data_outliers-replaced_aggregated.csv\"), index_col=0)\n",
-    "print(d.columns)\n",
-    "print(da.columns)"
+    "da = pd.read_csv(os.path.join(\"..\", \"data\", \"data_outliers-replaced_aggregated.csv\"), index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n<div class=\"barchart\"\n    data-name=\"Judgement of Memory\"\n    data-groups=\"Designers;Non-designers\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"58.547,54.5;52.528,53.455;\"\n    data-errors=\"2.75,3.28;3.171,3.084;\"\n    ></div>\n\n"
+      "\n<div class=\"barchart\"\n    data-name=\"Judgement of Memory\"\n    data-groups=\"Designers;Non-designers\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"58.547,54.5;52.528,53.455\"\n    data-errors=\"2.75,3.28;3.171,3.084\"\n    ></div>\n\n"
      ]
     }
    ],
@@ -69,6 +59,8 @@
     "        errors += str(round(r.sem(), 3)) + \",\"\n",
     "    values = values[:-1] + \";\"\n",
     "    errors = errors[:-1] + \";\"\n",
+    "values = values[:-1]\n",
+    "errors = errors[:-1]\n",
     "\n",
     "s = \"\"\"\n",
     "<div class=\"barchart\"\n",
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -97,7 +89,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n<div class=\"barchart\"\n    data-name=\"Response time\"\n    data-groups=\"Words;Non-words\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"7.43,7.948;7.53,8.089;\"\n    data-errors=\"0.012,0.015;0.014,0.017;\"\n    data-offset=\"7\"\n    ></div>\n\n"
+      "\n<div class=\"barchart\"\n    data-name=\"Response time\"\n    data-groups=\"Words;Non-words\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"7.42978,7.94816;7.52985,8.08865\"\n    data-errors=\"0.02557,0.03488;0.02689,0.04319\"\n    data-offset=\"7\"\n    ></div>\n\n"
      ]
     }
    ],
@@ -107,7 +99,7 @@
     "\n",
     "sid = 1\n",
     "options = [\"arial\", \"sansforgetica\"]\n",
-    "groups = [\"word\", \"non-word\"]\n",
+    "groups = [\"word\", \"nonword\"]\n",
     "metric = \"RTnorm\"\n",
     "\n",
     "# values and options are entered as: \n",
@@ -115,16 +107,17 @@
     "values = \"\"\n",
     "errors = \"\"\n",
     "\n",
-    "global_cond = (d[\"StudyID\"] == sid) & (d[\"Type\"] == \"lexical\")\n",
+    "global_cond = (da[\"StudyID\"] == sid) & (da[\"Type\"] == \"lexical\")\n",
     "for option in options:\n",
-    "    option_cond = (d[\"Font\"] == option) \n",
+    "    option_cond = (da[\"Font\"] == option) \n",
     "    for i, group in enumerate(groups):\n",
-    "        group_cond = (d[\"Category\"] == group)\n",
-    "        r = d[global_cond & group_cond & option_cond][metric]\n",
+    "        r = da[global_cond  & option_cond][metric + \"_\" + group]\n",
     "        values += str(round(r.mean(), 3)) + \",\"\n",
     "        errors += str(round(r.sem(), 3)) + \",\"\n",
     "    values = values[:-1] + \";\"\n",
     "    errors = errors[:-1] + \";\"\n",
+    "values = values[:-1]\n",
+    "errors = errors[:-1]\n",
     "\n",
     "s = \"\"\"\n",
     "<div class=\"barchart\"\n",
@@ -154,9 +147,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python383jvsc74a57bd03db8bdaf9c9e84f38f1bd928cb698e6d6a9172aa8642df80a78b7e4b6ededb17",
+   "display_name": "Python 3.8.3 64-bit ('3.8.3': pyenv)"
   },
   "language_info": {
    "codemirror_mode": {
