Fixed typos and silly bugs in notebooks

--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -9,18 +9,18 @@
     "- convert data from its raw form returned by the website\n",
     "- aggregate data per task\n",
     "\n",
-    "The processed data looks like this:\n",
+    "The processed data for lexical and recognition tasks looks like this:\n",
     "\n",
     "- non-aggregated, one row per trial (there are 72 trials in each session)\n",
     "- aggregated, one row per task (there are 4 tasks in each session)\n",
     "\n",
     "### Columns used for indexing\n",
     "\n",
-    "A study (StudyID) was conducted in sessions, one session per participant (ParticipantID). One session consists of two parts/tests (TestID). Each of these tests contains two tasks (TaskID in the aggregated data): a lexical task followed by a recognition task (Type). Each of these tasks is made of trials (TrialID) where an item (a sample text in specific font) is shown to the participant and a response is collected. Each lexical task is made of 20 trials. Each recognition task is made of 16 trials. There was an introductory questionnaire and two questionnaires after each lexical tasks.\n",
+    "A study (StudyID) was conducted in sessions, one session per participant (ParticipantID). One session consists of two parts/tests (TestID). Each of these tests contains two tasks (TaskID in the aggregated data): a lexical (lexical decision) task followed by a recognition task (Type). Each of these tasks is made up of trials (TrialID) where an item (a sample text in a specific font) is shown to the participant and a response is collected. Each lexical task is made of 20 trials. Each recognition task is made up of 16 trials. There was an introductory questionnaire and two questions after each lexical task.\n",
     "\n",
     "- `StudyID` (int), 0 refers to pilot study, 1 and 2 refer to studies #1 and #2 which had a different intention (see our report), but follow the same format\n",
     "- `ParticipantID` (int, 0 and higher) for a session (all trials) completed by one participant\n",
-    "- `TestID` (int, 1 or 2) for one of the two tests (this is called a “study part” in our report) in a session\n",
+    "- `TestID` (int, 1 or 2) for one of the two tests in a session (this is called a “study part” in our report)\n",
     "- `Type` (“lexical” or “recognition”) a task type for one of the two tasks in a part/test, the lexical task is always the first and the recognition task is always the second\n",
     "- `Trial ID` (int, positive) for individual trials, used only in the non-aggregated data\n",
     "- `Task ID` (int, 1–4) for the four tasks (lexical, recognition, lexical, recognition) that make up a single study session, used only in the aggregated data\n",
@@ -35,12 +35,12 @@
     "- `Font` (str) font used, “arial” or ‘sansforgetica”\n",
     "- `Sample` (str) sample text used\n",
     "- `Category` (str) word or non-word\n",
-    "- `Response` (str) differs for the lexical (Sure word, Probably word, Sure non-word, Probably non-word) and recognition (Sure seen, Probably seen, Sure not seen, Probably not seen) task\n",
-    "- `Correct` (float) whether participants response was correct (1.0) or not (0.0) or **mean** of these values in the aggregated data\n",
+    "- `Response` (str) differs for the lexical task (Sure word, Probably word, Sure non-word, Probably non-word) and recognition task (Sure seen, Probably seen, Sure not seen, Probably not seen) \n",
+    "- `Correct` (float) whether participant’s response was correct (1.0) or not (0.0) or **mean** of these values in the aggregated data\n",
     "- `Seen` (bool) for recognition tasks only, whether the item (sample) had been shown in the lexical task\n",
     "- `Foil` (str) for recognition tasks only, fake sample used instead of the real sample for items “not seen” in the lexical task\n",
     "- `RT` (float) response time or **mean** of response times in the aggregated data\n",
-    "- `RTnorm` (float) normalized response time or **mean** of normalized response times in the aggregated data\n",
+    "- `RTnorm` (float) normalized response time or **mean** of normalized response times in the aggregated data (natural logarithm was applied)\n",
     "\n",
     "### Columns used in aggregated data\n",
     "\n",
@@ -57,15 +57,15 @@
     "- `AUC` (float) for recognition tasks only, area under curve of participant’s responses in this task\n",
     "- `AUC_word` (float) same as `AUC`, but for words only\n",
     "- `AUC_nonword` (float) same as `AUC`, but for non-words only\n",
-    "- `AUCnorm` (float) same as `AUC`, but normalized\n",
+    "- `AUCnorm` (float) same as `AUC`, but normalized  by 2 x arcsin (√(AUC))\n",
     "- `AUCnorm_word` (float) same as `AUC`, but normalized and for words only\n",
     "- `AUCnorm_nonword` (float) same as `AUC`, but normalized and for non-words only\n",
-    "- `Correctnorm` (float) same as `Correct`, but normalized in non-aggregated data\n",
+    "- `Correctnorm` (float) same as `Correct`, but normalized in non-aggregated data  by 2 x arcsin (√(AUC))\n",
     "\n",
     "### Columns with responses from the intervening questionnaires\n",
     "\n",
-    "- `JoM` (float) response to judgement of memory for the lexical task (copied over to the following recognition task too)\n",
-    "- `JoL` (str) response to judgement of learning for the lexical task (copied over to the following recognition task too), in the aggregated data, the responses are converted to scale 0-100 to get a mean (see `map_JoL` mapping below)\n",
+    "- `JoM` (float) response to judgment of memory for the lexical task (copied over to the following recognition task too)\n",
+    "- `JoL` (str) response to judgment of legibility for the lexical task (copied over to the following recognition task too), in the aggregated data, the responses are converted to scale 0-100 to get a mean (see `map_JoL` mapping below)\n",
     "\n",
     "### Other columns\n",
     "\n",
@@ -177,11 +177,10 @@
    "source": [
     "## Convert data from the raw format to stats-ready format\n",
     "\n",
-    "The raw format has all responses from one participant in a single row\n",
-    "this breaks down results for individual trials (saved in columns like “test_1_lexical”)\n",
-    "and saves these as individual rows.\n",
-    "\n",
-    "Deal with some minor format differences as the formatting evolved with time."
+    "The raw format (saved from the website) has all responses from a single participant saved in a single row.\n",
+    "The responses for individual trials are saved in columns like “test_1_lexical”.\n",
+    "The following code convert this format and saves responses into individual rows.\n",
+    "It also deals with some minor format differences as the formatting evolved with time."
    ]
   },
   {
@@ -291,9 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add missing data & evaluate responses\n",
+    "## Deal with incomplete data & evaluate responses\n",
     "\n",
-    "Evaluate whether responses are correct or not, add normalized response time (RT) transformed using natural logarithm."
+    "Evaluate whether responses are correct or not; add normalized response time (RTnorm) transformed using natural logarithm."
    ]
   },
   {
@@ -312,7 +311,7 @@
     "        for w in f.readlines():\n",
     "            categories[w.strip()] = cat[:-1] # remove the final \"s\"\n",
     "\n",
-    "# add missing data & evaluate responses\n",
+    "# deal with incomplete data & evaluate responses\n",
     "for i, rd in d.iterrows():\n",
     "    # convert string \"yes\" to boolean\n",
     "    rd[\"Fluent\"] = (rd[\"Fluent\"] == \"yes\")\n",
