--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "The raw format (saved from the website) has all responses from a single participant saved in a single row.\n",
     "The responses for individual trials are saved in columns like “test_1_lexical”.\n",
-    "The following code convert this format and saves responses into individual rows.\n",
+    "The following code converts this format and saves responses into individual rows.\n",
     "It also deals with some minor format differences as the formatting evolved with time."
    ]
   },
